[package]
name = "near-marketplace-contract-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
serde = {version="1.0", features = ["derive"] }

[profile.release]
codegen-units = 1
# Tell rustc to optimise for small code size
opt-level = 'z'
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations
overflow-checks = true